corrected spacing on options page

--- a/style.css
+++ b/style.css
@@ -1604,8 +1604,7 @@ input::-moz-focus-inner {
   .show-print-inline {
     display: inline;
   }
-}
-
+  
 .startbackground {
   background: url(img/startbg.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -1631,7 +1630,7 @@ input::-moz-focus-inner {
 .logo {
 	width: 30%;
 	max-width: 90%;
-	margin-left:36%;
+	margin-left:35%;
 	position: fixed;
     bottom: 7%;   
 }
@@ -1671,8 +1670,7 @@ h3 {
   color: #ffffff;
   text-align: center;
   padding-top: 0px;
-  margin-top: .8em;
-  margin-bottom: .3em;
+  margin-top: 1.2em;
 }
 .optionsbackground {
   background: url(img/optionsbg.png) no-repeat center center fixed; 
@@ -1686,7 +1684,7 @@ h3 {
   list-style: none;
   margin: auto;
   padding-left: 10%;
-  padding-top: 10px;
+  padding-top: 1.2em;
 }
 .my_container ul .block {
   width: 43%;
